--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <h1>Your personal travel guide</h1>
+    <h1>Coming Soon for iPhone and Android</h1>
 
   </body>
 </html>
