--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <h1>Your personal travel guide</h1>
-    <h1>Coming Soon for iPhone and Android</h1>
-
+    <h1 class="mainheading">Discover hidden places in the world around you</h1>
+      <a class="download" href="#">Download Excursion (Coming Soon!)</a>
+      <p>
+        <video src="resources/videos/excursion.mp4" autoplay poster="posterimage.jpg"></video>
+      </p>
+    <h1 class="subheading">Your personal travel guide</h1>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="">
+      </p>
+      <p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="">
+      </p>
+    <h1 class="subheading">Coming Soon for iPhone and Android</h1>
+      <a class="download" href="#">Download Excursion (Coming Soon!)</a>
+      <p class="copyright">© Excursion</p>
   </body>
 </html>
